...
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Circle 4 – Insurance -->
        <LinearLayout
            android:id="@+id/circleInsurance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
...
