...
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/companyIdLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/openInquiriesButton"
                            android:layout_width="match_parent"
                            android:layout_height="52dp"
                            android:text="צפייה בפניות"
                            android:textAllCaps="false"
                            android:textStyle="bold"
                            android:textColor="@android:color/white"
...
